# older-reddit

./: Cargo.toml  README.md
src/: api.rs  api_result_types.rs  api_types.rs  comments.rs  image_proxy.rs  main.rs  search.rs  subreddit.rs  user.rs  utils.rs  wiki.rs
templates/: base.html  bottombar.html  comments.html  search.html  searchbar.html  subreddit.html  user.html  usersearchbar.html  utils.html  wiki.html
