[package]
name = "older-reddit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.0", features = ["markdown"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["headers", "macros"] }
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url-builder = "0.1.1"
